# buran

./: .dockerignore  .gitignore  Cargo.toml  README.md  README.ru.md  README.zh.md  docker-bake.hcl
.github/: dependabot.yml  release.yml
.github/workflows/: claude.yml  release.yml  scan.yml  tests.yml
benches/: README.md  docker-compose.yml  run.sh
benches/app/: index.php
benches/configs/: buran.yaml  fpm-pool.conf  freeunit.json  nginx.conf
crates/buran/: Cargo.toml  README.md
crates/buran-config/: Cargo.toml  README.md
crates/buran-config/src/: cpu.rs  lib.rs  schema.rs  subst.rs  validate.rs
crates/buran-echo/: Cargo.toml  README.md
crates/buran-echo/src/: main.rs  prototype.rs  worker.rs
crates/buran-ipc/: Cargo.toml  README.md
crates/buran-ipc/src/: frame.rs  hello.rs  lib.rs  request.rs
crates/buran-php/: Cargo.toml  README.md  build.rs
crates/buran-php/src/: embed_shim.c  main.rs  prototype.rs  sapi_shim.c  worker.rs
crates/buran-router/: Cargo.toml  README.md
crates/buran-router/src/: access_log.rs  dispatch.rs  http1.rs  lib.rs  matching.rs  routes.rs  serve_static.rs  template.rs  uri.rs  ws.rs
crates/buran-worker/: Cargo.toml  README.md
crates/buran-worker/src/: lib.rs
crates/buran/src/: main.rs  spawn.rs
docker/: minimal-alpine.Dockerfile  minimal-debian.Dockerfile  php-alpine.Dockerfile  php-debian.Dockerfile
docs/: README.md  applications.md  cli.md  configuration.md  deployment.md  getting-started.md  routing.md  static-files.md
examples/: buran.yaml
examples/public/: apcu.php  bg.php  big.php  hello.php  index.html  index.php  info.php  post.php  slow.php  upload.php  warn.php  work.php
examples/public/assets/: app.css  test.brn
packaging/: README.md
packaging/common/buran/: buran.yaml
packaging/common/systemd/: buran.service  buran.sysusers.conf  buran.tmpfiles.conf
tests/applications/: README.md  lib.sh
tests/applications/laravel/: Dockerfile  buran.yaml  docker-compose.yml  routes-web.php  run.sh
tests/applications/symfony/: Dockerfile  HelloController.php  ProbeController.php  buran.yaml  docker-compose.yml  run.sh
tests/applications/wordpress/: Dockerfile  buran-probe.php  buran.yaml  docker-compose.yml  run.sh  wp-config.php
tests/applications/yii2/: Dockerfile  ProbeController.php  buran.yaml  docker-compose.yml  run.sh
tests/applications/yii3/: Action.php  Dockerfile  buran.yaml  docker-compose.yml  routes.php  run.sh
tests/golden/: lib.sh
tests/golden/php/: buran.yaml  cases.txt  regenerate.sh  run.sh
tests/golden/php/golden/: dir-noslash.json  dir-slash.json  dotdot.json  double-slash.json  encoded-script.json  front-asset-missing.json  front-encoded.json  front-pretty-query.json  front-pretty.json  front-root.json  head-index.json  index-direct.json  missing-php.json  pathinfo-deep.json  pathinfo-encoded.json  pathinfo-slash.json  pathinfo.json  query-brackets.json  query-empty.json  query-pathinfo.json  query-repeat.json  query-simple.json  root.json
tests/golden/php/nginx-fpm/: docker-compose.yml  nginx.conf  zz-golden.conf
tests/golden/php/www/: dump.php  index.php
tests/golden/php/www/dir/: index.php
tests/smoke/: minimal.yaml  php.yaml  run.sh
tests/smoke/www/: index.php  static.txt
