[package]
name = "buran-ipc"
description = "Buran Worker Protocol (BWP): framing and flat request encoding"
# Published SDK crate — versioned independently of the server (which moves with
# every image/package release). Bump when its own API or published artifact
# changes. 0.2.1: add README (no code change since 0.2.0).
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
